--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -62,7 +62,7 @@
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="taquilalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Taquilalia</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="verborragia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Verborragia</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="bradilalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Bradilalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]"value="latencia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Latencia de respuesta</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]"value="latencia-de-respuesta" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Latencia de respuesta</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="mutismo" onclick="unselect(value, name)"/>Mutismo</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="musitaciones" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Musitaciones</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="soliloquio" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Soliloquio</label>
@@ -70,9 +70,9 @@
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="jergafasia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Jergafasia</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="ecolalia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Ecolalia</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="pararrespuesta" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Pararrespuesta</label>
-                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="estereotipia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Estereotipia verbal</label>
+                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="estereotipia-verbal" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Estereotipia verbal</label>
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="verbigeracion" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Verbigeracion</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="homofonia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Asociación por homofonía</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="asociacion-por-homofonia" onclick="unselectUnicos('sin-particularidades,mutismo', name)"/>Asociación por homofonía</label>
                 </div>
               </div>
             </div>
