FIX RENAME contenido-pensamiento ypensamiento

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -116,8 +116,8 @@
                     sistematizada</label>
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]"value="ideacion-delirante-no-sistematizada" onclick="unselectUnicos('sin-particularidades,ideacion-delirante-sist', name)"/>Ideación delirante no
                     sistematizada</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-muerte" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas de muerte</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-suicidas" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas suicidas</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-muerte" onclick="unselectUnicos('sin-particularidades', name)"/>Ideas de muerte</label>
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="ideas-suicidas" onclick="unselectUnicos('sin-particularidades', name)"/>Ideas suicidas</label>
                 </div>
               </div>
             </div>
