--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -25,15 +25,14 @@
         <h6>Aspecto *</h6>
         <div id="aspecto" class="checkboxes">
           <div class="form-control">
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-facie" />Facie</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-alinio" />Aliño</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-aseo" />Aseo</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-bizarro" />Bizarro</label>
-            <label id="check"><input type="checkbox" name="aspecto[]"
-                value="aspecto-extravagante" />Extravagante</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-inadecuado" />Inadecuado</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-adelgazado" />Adelgazado</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="aspecto-hipomimico" />Hipomímico</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="facie" />Facie</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="alinio" />Aliño</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aseo" />Aseo</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="bizarro" />Bizarro</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="extravagante" />Extravagante</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="inadecuado" />Inadecuado</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="adelgazado" />Adelgazado</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="hipomimico" />Hipomímico</label>
           </div>
         </div>
       </div>
