rename aliNIo por aliÑo

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -26,7 +26,7 @@
         <div id="aspecto" class="checkboxes">
           <div class="form-control">
             <label id="check"><input type="checkbox" name="aspecto[]" value="facie" />Facie</label>
-            <label id="check"><input type="checkbox" name="aspecto[]" value="alinio" />Aliño</label>
+            <label id="check"><input type="checkbox" name="aspecto[]" value="aliño" />Aliño</label>
             <label id="check"><input type="checkbox" name="aspecto[]" value="aseo" />Aseo</label>
             <label id="check"><input type="checkbox" name="aspecto[]" value="bizarro" />Bizarro</label>
             <label id="check"><input type="checkbox" name="aspecto[]" value="extravagante" />Extravagante</label>
