--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -170,8 +170,8 @@
             </label>
             <label id="check">
               <input type="checkbox" name="contenido-pensamiento[]" value="ideas-suicidas"
-                onclick="unselectUnicos('sin-particularidades', name)" />I
-              deas suicidas
+                onclick="unselectUnicos('sin-particularidades', name)" />
+                Ideas suicidas
             </label>
           </div>
         </div>
