fix Meticulosidad por Minuciosidad, concreto por pensamiento-concreto. Agrego IMPULSIONES en la bd

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -29,8 +29,8 @@
         <div class="btn-group">
           <button id="sintomas-positivos-alucinaciones-si" class="btn btn-choice">Sí</button>
           <button id="sintomas-positivos-alucinaciones-no" class="btn btn-choice">No</button>
-          <button id="sintomas-positivos-alucinaciones-no-descarta" class="btn btn-choice">No se
-            descarta</button>
+          <button id="sintomas-positivos-alucinaciones-no-descarta" class="btn btn-choice">
+            No se descarta</button>
         </div>
         <div id="error-sintomas-positivos-alucinaciones" class="error-message-text"></div>
       </div>
@@ -106,11 +106,11 @@
                 onclick="unselectUnicos('sin-particularidades', name)" />Tangencial</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="circunstancial"
                 onclick="unselectUnicos('sin-particularidades', name)" />Circunstancial</label>
-            <label id="check"><input type="checkbox" name="pensamiento[]" value="meticulosidad"
-                onclick="unselectUnicos('sin-particularidades', name)" />Meticulosidad</label>
+            <label id="check"><input type="checkbox" name="pensamiento[]" value="minuciosidad"
+                onclick="unselectUnicos('sin-particularidades', name)" />Minuciosidad</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="viscosidad"
                 onclick="unselectUnicos('sin-particularidades', name)" />Viscosidad</label>
-            <label id="check"><input type="checkbox" name="pensamiento[]" value="concreto"
+            <label id="check"><input type="checkbox" name="pensamiento[]" value="pensamiento-concreto"
                 onclick="unselectUnicos('sin-particularidades', name)" />Pensamiento concreto</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="idea-fija"
                 onclick="unselectUnicos('sin-particularidades', name)" />Idea fija</label>
@@ -171,7 +171,7 @@
             <label id="check">
               <input type="checkbox" name="contenido-pensamiento[]" value="ideas-suicidas"
                 onclick="unselectUnicos('sin-particularidades', name)" />
-                Ideas suicidas
+              Ideas suicidas
             </label>
           </div>
         </div>
