--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -62,7 +62,7 @@
           <option value="ataxia">Ataxia</option>
           <option value="ecopraxia">Ecopraxia</option>
           <option value="manierismo">Manierismo</option>
-          <option value="estereotipia-motora">Estereotipia Motora</option>
+          <option value="estereotipia-motora">Estereotipia motora</option>
           <option value="interceptacion-cinetica">Interceptación cinética</option>
           <option value="negativismo">Negativismo</option>
           <option value="obediencia-automatica">Obediencia automática</option>
