fix visual en tabla "Consultar Casos"

--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Casos</title>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="consultar-casos.css">
 </head>
@@ -42,7 +43,6 @@
         <table id="tabla-pacientes">
             <thead>
                 <tr>
-                    <!-- <th>Código</th> -->
                     <th>Nombre</th>
                     <th>Diagnóstico</th>
                     <th>Estado</th>
@@ -51,7 +51,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Los datos de los pacientes se insertarán aquí -->
             </tbody>
         </table>
     </div>
@@ -67,6 +66,7 @@
         <p><strong>Universidad de Morón.</strong></p>
     </div>
     <script src="consultar-casos.js"></script>
+
 </body>
 
 </html>
