intrgracion con la BD y logica para que funcione "Ver Detalle" del paciente seleccionado en "Consultar Casos" se selecciona por ID_PACIENTE

--- a/demo/src/main/resources/static/detalle/detalleDiagnostico.html
+++ b/demo/src/main/resources/static/detalle/detalleDiagnostico.html
@@ -26,15 +26,11 @@
                 <h5 id="estado-rechazado" class="no-show-seccion">
                     Estado: <strong>Rechazado</strong>
                 </h5>
-                <h5 id="estado-aceptado" class=".no-show-seccion">
+                <h5 id="estado-aceptado" class="no-show-seccion">
                     Estado: <strong>Aceptado</strong>
                 </h5>
-            </div>
-
-            <div id="justificacion-rechazo-container" class="justificacion-rechazo-container no-show-seccion">
-                <h6 for="justificacion-rechazo-title">Justificación de rechazo del diagnóstico</h6>
-                <textarea id="justificacion-rechazo" name="justificacion-rechazo" class="form-control textarea" rows="3"
-                    readonly></textarea>
+                <h6 id="fecha"></h6>
+                <h6 id="medico"></h6>
             </div>
 
             <div id="recomendacion-container" class="recomendacion-container">
@@ -42,15 +38,20 @@
                 <textarea id="recomendacion" name="recomendacion" class="form-control textarea" rows="3"
                     readonly></textarea>
             </div>
-            <div id="comentarios-medicos-container" class="comentarios no-show-seccion">
-                <h6 for="comentarios-medicos-title">Comentarios adicionales sobre el paciente</h6>
-                <textarea id="comentarios-medicos" name="comentarios-medicos" class="form-control textarea" rows="3"
-                    readonly></textarea>
-            </div>
 
             <div id="justificacion-container" class="justificacion-container">
                 <h6 for="justificacion-title">Justificación</h6>
                 <textarea id="justificacion" name="justificacion" class="form-control textarea" rows="10"
+                    readonly></textarea>
+            </div>
+            <div id="justificacion-rechazo-container" class="justificacion-rechazo-container no-show-seccion">
+                <h6 for="justificacion-rechazo-title">Justificación de rechazo del diagnóstico</h6>
+                <textarea id="justificacion-rechazo" name="justificacion-rechazo" class="form-control textarea" rows="3"
+                    readonly></textarea>
+            </div>
+            <div id="comentarios-medicos-container" class="comentarios no-show-seccion">
+                <h6 for="comentarios-medicos-title">Comentarios adicionales sobre el paciente</h6>
+                <textarea id="comentarios-medicos" name="comentarios-medicos" class="form-control textarea" rows="3"
                     readonly></textarea>
             </div>
         </div>
