--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -136,7 +136,8 @@
           <div class="tooltip-container">
             <i class="fas fa-info-circle icon-tooltip"></i>
             <span class="tooltip">Indica si hay bajo funcionamiento en áreas principales como el trabajo, las relaciones
-              interpersonales o el cuidado personal.</span>
+              interpersonales o el cuidado personal.
+            </span>
           </div>
         </h6>
         <div class="btn-group">
@@ -149,9 +150,9 @@
       <div id="bajo-funcionamiento-comentario-id" class="margin-filas" style="display: none;">
         <h6 for="bajo-funcionamiento-comentario-title">Comentario sobre los ámbitos principales</h6>
         <textarea id="bajo-funcionamiento-comentario" class="form-control" rows="3"
-          placeholder="Comentarios sobre el bajo funcionamiento en los ámbitos principales"></textarea>
+          placeholder="Comentarios sobre el bajo funcionamiento en los ámbitos principales">
+        </textarea>
       </div>
-
     </div>
   </div>
 
