--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Casos</title>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="consultar-casos.css">
 </head>
-
-<body>
-    <div class="page-title">
-        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+<header>
+    <div class="title" style="height: 100px;">
+        <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
+    <div class="user-info">
+        <span class="username" id="username">Dr/Dra: admin user </span>
+        <button class="logout-button"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
+            logout
+            </span>Cerrar Sesión</button>
+    </div>
+</header>
+<body>
+    <!-- <div class="page-title">
+        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+    </div>-->
     <div class="container-casos">
         <h1 class="title">Listado de Casos</h1>
         <div class="search-container">
@@ -66,6 +80,9 @@
         <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="consultar-casos.js"></script>
 </body>
 
