--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="detalle.css">
 </head>
 
-<body>
-    <div class="page-title">
-        <h1 style="color: white;">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+<header>
+    <div class="title" style="height: 100px;">
+        <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
+    <div class="user-info">
+        <span class="username" id="username" >Dr/Dra: admin user </span>
+        <button class="logout-button"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
+            logout
+            </span>Cerrar Sesión</button>
+    </div>
+</header>
+
+<body>
+    <!-- <div class="page-title">
+        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+    </div>-->
     <div class="container" id="detalle" style="overflow-x: hidden;">
         <div class="row data-columns">
             <h2>Datos del Paciente</h2>
