--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=logout" />
     <link rel="stylesheet" href="index.css">
 
 </head>
+<header>
+    <div class="title" style="height: 100px;">
+        <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+    </div>
+    <div class="user-info">
+        <span class="username" id="username" >Dr/Dra: admin user </span>
+        <button class="logout-button"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
+            logout
+            </span>Cerrar Sesión</button>
+    </div>
+</header>
 
 <body>
-    <div class="page-title">
-        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
-    </div>
+    
     <div class="container container-page">
         <div class="contenedor">
-            <a href="formulario/formulario.html" class="button">
+            <a href="formulario/formulario.html" class="button" onclick="sendNombre()">
                 <!-- <i class="fas fa-user-md fa-3x button-icon"></i> -->
                 <i class="fas fa-stethoscope fa-3x button-icon" style="color: #0f0f10;"></i>
                 <h2 class="button-title">Diagnosticar Paciente</h2>
@@ -24,7 +34,7 @@
             </a>
         </div>
         <div class="contenedor">
-            <a href="casos/consultar-casos.html" class="button">
+            <a href="casos/consultar-casos.html" class="button" onclick="sendNombre()">
                 <!-- <i class="fas fa-search fa-3x button-icon"></i> -->
                 <i class="fas fa-folder-open fa-3x button-icon"></i>
                 <h2 class="button-title">Consultar Casos</h2>
@@ -32,7 +42,7 @@
             </a>
         </div>
         <div class="contenedor">
-            <a href="dataset/exportar.html" class="button">
+            <a href="dataset/exportar.html" class="button" onclick="sendNombre()">
                 <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
                 <!-- <i class="fas fa-solid fa-file-export fa-3x button-icon"></i> -->
                 <h2 class="button-title">Exportar Datos</h2>
@@ -49,6 +59,9 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>-->
+
 </body>
 
 </html>
