--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -28,6 +28,7 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <div class="modal-icon">📊</div>
+            <div class="loader"></div>
             <p id="modalMessage" class="modal-message"></p>
             <button id="btnClose" class="btn-close" onclick="closeModal()" style="margin: 20px;">
                 Cerrar
