Boton cerrar- (el problema era la imagen) y headers

--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <div class="title" style="height: 100px;">
+    <div class="title" style="height: 100px; font-family: Arial, sans-serif ">
         <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="user-info">
