--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exportar Datos</title>
+    <title class="exportar">Exportar Datos</title>
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="exportar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
 </head>
 
 <header>
-    <div class="title" style="height: 100px;">
+    <div class="title" style="height: 100px;" style="height: 100px; font-family: Arial, sans-serif ">
         <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="user-info">
@@ -45,9 +45,13 @@
             <div class="modal-icon">📊</div>
             <div class="loader"></div>
             <p id="modalMessage" class="modal-message"></p>
-            <button id="btnClose" class="btn-close" onclick="closeModal()" style="margin: 20px;">
-                Cerrar
+            <button id="btnClose"  class="close" onclick="closeModal()"><span class="material-symbols-outlined" style="font-size: 18px; font-weight: bold;">
+                close
+                </span> Cerrar
             </button>
+            <!-- <button id="btnClose" class="btn-close" onclick="closeModal()" style="width: 30%; display: flex; justify-content: space-between; ">
+                Cerrar
+            </button>-->
         </div>
     </div>
     
