--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="detalle.css">
 </head>
@@ -30,7 +29,7 @@
     </div>-->
     <div class="container" id="detalle" style="overflow-x: hidden;">
         <div class="row data-columns">
-            <h2>Datos del Paciente</h2>
+            <h2 class="titulo-datos">Datos del Paciente</h2>
             <div class="col-md-6">
                 <div class="gray-box">
                     <div class="form-group-detalle margin-filas">
