Arreglo botones Volver, agrego Cerrar Sesion, agrego el pase del Medico medico entre pantallas

--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -17,8 +17,8 @@
         <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="user-info">
-        <span class="username" id="username" >Dr/Dra: admin user </span>
-        <button class="logout-button"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
+        <span class="username" id="username" >Dr/Dra: </span>
+        <button class="logout-button" id="btnCerrarSesion"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
             logout
             </span>Cerrar Sesión</button>
     </div>
