--- a/demo/src/main/resources/static/Login/login.html
+++ b/demo/src/main/resources/static/Login/login.html
@@ -58,7 +58,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="Login/login.js"></script>
+    <script src="../Login/login.js"></script>
 </body>
 
 </html>
