--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -6,28 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="formulario.css">
 </head>
 
 <header>
-    <div class="title" style="height: 100px; font-family: Arial, sans-serif ">
-        <h1 class="titulo">Sistema Experto - Diagnóstico de Esquizofrenia</h1>
+    <div class="page-title">
+        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="user-info">
-        <span class="username" id="username" >Dr/Dra: </span>
-        <button class="logout-button" id="btnCerrarSesion"><span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
-            logout
-            </span>Cerrar Sesión</button>
+        <span class="username" id="username">Dr/Dra: </span>
+        <button class="logout-button" id="btnCerrarSesion">
+            <span class="material-symbols-outlined" style="color:#000000; font-size:17px;">
+                logout
+            </span>Cerrar Sesión
+        </button>
     </div>
 </header>
 
 <body>
-   <!-- <div class="page-title">
-        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
-    </div>-->
     <div class="container" id="formulario" style="overflow-x: hidden;">
         <div class="row data-columns">
             <h2 style="color: #009587">Datos del Paciente</h2>
@@ -133,7 +132,7 @@
         <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="formulario.js"></script>
