agrego columna MEDICO en "Consultar Casos"

--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -63,6 +63,7 @@
                     <th>Diagnóstico</th>
                     <th>Estado</th>
                     <th>Fecha de Ingreso</th>
+                    <th>Médico a Cargo</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
