agrego mensaje de "Aún no se ingresó ningún paciente." en "Consultar Casos"

--- a/demo/src/main/resources/static/casos/consultar-casos.html
+++ b/demo/src/main/resources/static/casos/consultar-casos.html
@@ -56,8 +56,12 @@
     </div>
 
     <div class="table-container">
+        <div id="no-pacientes-msg" class="alert-message">
+            <!-- <div class="alert-icon">!</div> -->
+            <span class="alert-text">Aún no se ingresó ningún paciente.</span>
+        </div>
         <table id="tabla-pacientes">
-            <thead>
+            <thead style="display: none">
                 <tr>
                     <th>Nombre</th>
                     <th>Diagnóstico</th>
