cambio estado de Aceptado a Confirmado

--- a/demo/src/main/resources/static/detalle/detalleDiagnostico.html
+++ b/demo/src/main/resources/static/detalle/detalleDiagnostico.html
@@ -26,8 +26,8 @@
                 <h5 id="estado-rechazado" class="no-show-seccion">
                     Estado: <strong>Rechazado</strong>
                 </h5>
-                <h5 id="estado-aceptado" class="no-show-seccion">
-                    Estado: <strong>Aceptado</strong>
+                <h5 id="estado-confirmado" class="no-show-seccion">
+                    Estado: <strong>Confirmado</strong>
                 </h5>
                 <h6 id="fecha"></h6>
                 <h6 id="medico"></h6>
