--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -65,13 +65,13 @@
             <label id="check"><input type="checkbox" name="lenguaje[]" value="sin-particularidades"
                 onclick="unselect(value, name)" />Sin particularidades</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="taquilalia"
-                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Taquilalia</label>
+                onclick="unselectUnicos('sin-particularidades,mutismo, bradilalia', name)" />Taquilalia</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="verborragia"
-                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Verborragia</label>
+                onclick="unselectUnicos('sin-particularidades,mutismo, latencia-de-respuesta', name)" />Verborragia</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="bradilalia"
-                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Bradilalia</label>
+                onclick="unselectUnicos('sin-particularidades,mutismo, taquilalia', name)" />Bradilalia</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="latencia-de-respuesta"
-                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Latencia de respuesta</label>
+                onclick="unselectUnicos('sin-particularidades,mutismo, verborragia', name)" />Latencia de respuesta</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="mutismo"
                 onclick="unselect(value, name)" />Mutismo</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="musitaciones"
@@ -103,9 +103,9 @@
             <label id="check"><input type="checkbox" name="pensamiento[]" value="sin-particularidades"
                 onclick="unselect(value, name)" />Sin particularidades</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="tangencial"
-                onclick="unselectUnicos('sin-particularidades', name)" />Tangencial</label>
+                onclick="unselectUnicos('sin-particularidades, circunstancial', name)" />Tangencial</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="circunstancial"
-                onclick="unselectUnicos('sin-particularidades', name)" />Circunstancial</label>
+                onclick="unselectUnicos('sin-particularidades, tangencial', name)" />Circunstancial</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="minuciosidad"
                 onclick="unselectUnicos('sin-particularidades', name)" />Minuciosidad</label>
             <label id="check"><input type="checkbox" name="pensamiento[]" value="viscosidad"
