--- a/demo/src/main/resources/static/Login/login.html
+++ b/demo/src/main/resources/static/Login/login.html
@@ -8,37 +8,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="/Login/login.css">
-
 </head>
-
 
 <body>
     <div class="container" id="login">
         <div class="container-page">
-            <div class="box">
+            <div class="box" style="border-radius: 10px;">
                 <div class="color-box" style="float:left;text-align: center;">
                     <h3>Sistema Experto</h3>
-                    <h1>Diagnóstico de Esquizofrenia</h1>
+                    <h1 style="font-weight: bold">Diagnóstico de Esquizofrenia</h1>
                 </div>
                 <div class="gray-box" style="float:right;">
                     <div class="form-group margin-filas">
                         <label for="mail" class="inicio">
                             <span class="material-symbols-outlined">person</span> Usuario
                         </label>
-                        <input type="text" class="form-control" id="mail" name="mail" placeholder="Ingrese su email"
-                            required style="margin-top: 12px; margin-bottom: 50px;">
+                        <input type="email" class="form-control inputs" id="mail" name="mail"
+                            placeholder="Ingrese su email" required>
                     </div>
                     <div class="form-group margin-filas">
-                        <label for="contraseña" class="inicio"><span class="material-symbols-outlined">
-                                lock
-                            </span>Contraseña</label>
-                        <input type="password" class="form-control" id="contraseña" name="contraseña"
-                            placeholder="Ingrese su contraseña" min="1" max="120" required
-                            style="margin-top: 12px; margin-bottom: 50px;">
+                        <label for="contraseña" class="inicio">
+                            <span class="material-symbols-outlined">lock</span>Contraseña
+                        </label>
+                        <div class="input-with-icon">
+                            <input type="password" class="form-control inputs" id="contraseña" name="contraseña"
+                                placeholder="Ingrese su contraseña" min="1" max="120" required>
+                            <span class="toggle-password" onclick="togglePasswordVisibility()">
+                                <i id="eyeIcon" class="fas fa-eye"></i>
+                            </span>
+                        </div>
                     </div>
-
                     <div class="row" style="margin-top: 70px; margin-bottom: 50px;">
                         <div class="btn-iniciar-sesion">
                             <div class="d-flex justify-content-center">
@@ -50,7 +52,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
     <div class="footer">
@@ -58,6 +59,7 @@
         <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="../Login/login.js"></script>
