cambio paraRrespuesta por pararespuesta

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -84,8 +84,8 @@
                 onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Jergafasia</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="ecolalia"
                 onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Ecolalia</label>
-            <label id="check"><input type="checkbox" name="lenguaje[]" value="pararrespuesta"
-                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Pararrespuesta</label>
+            <label id="check"><input type="checkbox" name="lenguaje[]" value="pararespuesta"
+                onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Pararespuesta</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="estereotipia-verbal"
                 onclick="unselectUnicos('sin-particularidades,mutismo', name)" />Estereotipia verbal</label>
             <label id="check"><input type="checkbox" name="lenguaje[]" value="verbigeracion"
