agrego error si falla la descarga de excel

--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -41,6 +41,7 @@
         <div class="modal-content">
             <div class="modal-icon">📊</div>
             <div class="loader"></div>
+            <div class="error-icon">⚠️</div>
             <p id="modalMessage" class="modal-message"></p>
             <button id="btnClose" class="btn-custom btn-cerrar" onclick="closeModal()">
                 Cerrar
