agrando campo de comentarios de bajo funcionamiento en detalle del paciente

--- a/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
+++ b/demo/src/main/resources/static/detalle/detalleSintomasNegativos.html
@@ -48,7 +48,7 @@
                     <button id="bajo-funcionamiento-no" class="btn btn-choice">No</button>
                 </div>
             </div>
-            <div id="bajo-funcionamiento-comentario-id" class="comentarios no-show-seccion">
+            <div id="bajo-funcionamiento-comentario-id" class="comentario-adicional no-show-seccion">
                 <h6 for="bajo-funcionamiento-comentario-title">Comentario sobre el bajo funcionamiento</h6>
                 <textarea id="bajo-funcionamiento-comentario" class="form-control textarea" rows="2"
                     readonly></textarea>
