DETALLE-  botones e imagen

--- a/demo/src/main/resources/static/detalle/detalleComplementarios.html
+++ b/demo/src/main/resources/static/detalle/detalleComplementarios.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="gray-box">
             <div class="content-container">
-                <div class="row">
+                <div id="complementarios" class="row">
                     <div class="col-md-4">
                         <div class="button-container">
                             <h6 for="sustancias" style="text-align: center;">Bajo sustancias o efectos médicos</h6>
@@ -27,6 +27,7 @@
 
                     <div class="col-md-4">
                         <div class="button-container">
+                            <br class="adjust-br">
                             <h6 for="estudios" style="text-align: center;">Estudios</h6>
                             <div class="btn-group">
                                 <button id="estudios-si" class="btn btn-choice">Sí</button>
@@ -37,6 +38,7 @@
 
                     <div id="estudio-causa-natural-id" class="col-md-4 no-show-seccion">
                         <div class="button-container">
+                            <br class="adjust-br">
                             <h6 for="estudio-causa-natural" style="text-align: center;">¿Causa orgánica?</h6>
                             <div class="btn-group">
                                 <button id="estudios-causa-organica-si" class="btn btn-choice">Sí</button>
