--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -71,6 +71,7 @@
             </div>
             <div class="col-md-3 btn-bool">
                 <div class="form-group-btn margin-filas opciones">
+                    <br class="adjust-br">
                     <h6 for="trastorno-depresivo">Trastorno Depresivo</h6>
                     <div class="btn-group">
                         <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
